--- a/data_wrangling/YoutubeExtractor/getYoutubelinks.ipynb
+++ b/data_wrangling/YoutubeExtractor/getYoutubelinks.ipynb
@@ -86,7 +86,7 @@
     "link_results = \"\"\n",
     "youtube_url = \"https://www.youtube.com/watch?\"\n",
     "for data in video_links:\n",
-    "    title = re.sub('[\\–\\(\\)\\+\\,\\|]*','',data[1])\n",
+    "    title = re.sub('[\\'\\–\\(\\)\\+\\,\\|]*','',data[1])\n",
     "    title = re.sub('\\s+','_',title)\n",
     "    link_results += youtube_url + \"v=\" + data[0] + \"|\" + title + \"\\n\""
    ]
