--- a/DataWrangling/YoutubeExtractor/getYoutubelinks.ipynb
+++ b/DataWrangling/YoutubeExtractor/getYoutubelinks.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,14 +79,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "link_results = \"\"\n",
     "youtube_url = \"https://www.youtube.com/watch?\"\n",
     "for data in video_links:\n",
-    "    title = re.sub('[\\'\\–\\(\\)\\+\\,\\|]*','',data[1])\n",
+    "    title = re.sub('[\\’\\'\\–\\(\\)\\+\\,\\|]*','',data[1])\n",
     "    title = re.sub('\\s+','_',title)\n",
     "    link_results += youtube_url + \"v=\" + data[0] + \"|\" + title + \"\\n\""
    ]
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +120,7 @@
        " 'https://www.youtube.com/watch?v=dYvPCgcFDIo|Backstreet_Boys_I_Want_It_That_Way_Studio_Acapella_DL_Link',\n",
        " 'https://www.youtube.com/watch?v=JhqmjUUIeqY|2Pac_Troublesome_Studio_Acapella_DL_Link',\n",
        " 'https://www.youtube.com/watch?v=rZeZ5V4UOKM|Bruno_Mars_Locked_Out_of_Heaven_Studio_Acapella_DL_Link',\n",
-       " 'https://www.youtube.com/watch?v=n97awIH1X94|Gnash_Olivia_O’Brien_I_Hate_U_I_Love_U_Studio_Acapella_DL_Link',\n",
+       " 'https://www.youtube.com/watch?v=n97awIH1X94|Gnash_Olivia_OBrien_I_Hate_U_I_Love_U_Studio_Acapella_DL_Link',\n",
        " 'https://www.youtube.com/watch?v=BuQznOi-5-o|Akon_Lonely_Studio_Acapella_DL_Link',\n",
        " 'https://www.youtube.com/watch?v=pa5mAOyeawg|Desiigner_Tiimmy_Turner_Studio_Acapella_DL_Link',\n",
        " 'https://www.youtube.com/watch?v=I7po1PjQEuU|Avicii_Sandro_Cavazza_Without_You_Studio_Acapella_DL_Link',\n",
@@ -128,7 +128,7 @@
        " 'https://www.youtube.com/watch?v=Khs4fbjUCx4|Missy_Elliott_Get_Ur_Freak_On_Studio_Acapella_DL_Link']"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -136,6 +136,20 @@
    "source": [
     "link_results.split(\"\\n\")[:10]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
