data wrangling readme

--- a/DataWrangling/YoutubeExtractor/getYoutubelinks.ipynb
+++ b/DataWrangling/YoutubeExtractor/getYoutubelinks.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,14 +42,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "#instrumental tracks\n",
     "#link = \"https://www.youtube.com/watch?v=tD5K-e0IAeg&list=RDQMkx27ckV3nGI&start_radio=1\"\n",
+    "#link = \"https://www.youtube.com/watch?v=8yYpQi96bng&list=PLrgkRQ9954-Rv7gNesYeAzmjwzuBbkM47&index=1\"\n",
+    "link = \"https://www.youtube.com/watch?v=spKeM0xepA4&list=PLiy0XOfUv4hFHmPs0a8RqkDzfT-2nw7WV&index=8\"\n",
     "#acapella tracks\n",
-    "link = \"https://www.youtube.com/watch?v=oWop9OzZ6d4&list=PLdmX7FFFYdFAhjLgdBK9UV7_m2Puls7jc\""
+    "#link = \"https://www.youtube.com/watch?v=oWop9OzZ6d4&list=PLdmX7FFFYdFAhjLgdBK9UV7_m2Puls7jc\"\n"
    ]
   },
   {
@@ -61,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,25 +112,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['https://www.youtube.com/watch?v=oWop9OzZ6d4|Post_Malone_I_Fall_Apart_Studio_Acapella_DL_Link',\n",
-       " 'https://www.youtube.com/watch?v=dYvPCgcFDIo|Backstreet_Boys_I_Want_It_That_Way_Studio_Acapella_DL_Link',\n",
-       " 'https://www.youtube.com/watch?v=JhqmjUUIeqY|2Pac_Troublesome_Studio_Acapella_DL_Link',\n",
-       " 'https://www.youtube.com/watch?v=rZeZ5V4UOKM|Bruno_Mars_Locked_Out_of_Heaven_Studio_Acapella_DL_Link',\n",
-       " 'https://www.youtube.com/watch?v=n97awIH1X94|Gnash_Olivia_OBrien_I_Hate_U_I_Love_U_Studio_Acapella_DL_Link',\n",
-       " 'https://www.youtube.com/watch?v=BuQznOi-5-o|Akon_Lonely_Studio_Acapella_DL_Link',\n",
-       " 'https://www.youtube.com/watch?v=pa5mAOyeawg|Desiigner_Tiimmy_Turner_Studio_Acapella_DL_Link',\n",
-       " 'https://www.youtube.com/watch?v=I7po1PjQEuU|Avicii_Sandro_Cavazza_Without_You_Studio_Acapella_DL_Link',\n",
-       " 'https://www.youtube.com/watch?v=wx-g-f39TOA|Jhené_Aiko_The_Worst_Studio_Acapella_DL_Link',\n",
-       " 'https://www.youtube.com/watch?v=Khs4fbjUCx4|Missy_Elliott_Get_Ur_Freak_On_Studio_Acapella_DL_Link']"
+       "['https://www.youtube.com/watch?v=vltC-O7PDYQ|Herb_Alpert_-_Rise_HQ_Audio',\n",
+       " 'https://www.youtube.com/watch?v=qfIiYBMIgJs|Feel_so_Good_-_Chuck_Mangion',\n",
+       " 'https://www.youtube.com/watch?v=zrGcdnZ_rWc|SHAKATAK_-_Night_Birds',\n",
+       " 'https://www.youtube.com/watch?v=rHHH97QlI8c|Yellowjackets_-_Local_Hero',\n",
+       " 'https://www.youtube.com/watch?v=vmDDOFXSgAs|Dave_Brubeck_-_Take_Five',\n",
+       " 'https://www.youtube.com/watch?v=wsTmzb1HHvM|Boney_James_-_Stop_Look_Listen_To_Your_Heart',\n",
+       " 'https://www.youtube.com/watch?v=447yaU_4DF8|Kenny_G_-_The_Moment_Official_Video',\n",
+       " 'https://www.youtube.com/watch?v=spKeM0xepA4|Kim_Waters_-_Love_like_this',\n",
+       " 'https://www.youtube.com/watch?v=b9dQEn-LGwY|Ronny_Jordan_-_Heaven',\n",
+       " 'https://www.youtube.com/watch?v=zwBpGU8RY3A|Fourplay_-_101_Eastbound']"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -136,13 +138,6 @@
    "source": [
     "link_results.split(\"\\n\")[:10]"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
